# XConfigGen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
cmake/: QSerializer.cmake
examples/: CMakeLists.txt  simple_test.cpp
src/: XConfigGen.cpp  XConfigGen.h
src/models/xray/: Xray.h
