cmake_minimum_required(VERSION 3.16)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
project(simple_test LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 COMPONENTS Core REQUIRED)
qt_standard_project_setup(REQUIRES 6.5)
add_compile_definitions(QS_HAS_JSON)
add_compile_definitions(QSERIALIZER_INCLUDED)
include_directories(../src)
include_directories(../3rd)
include_directories(../3rd/QSerializer)
set(SRC_FILES ../src/XConfigGen.cpp simple_test.cpp)
set(HEADER_FILES ../3rd/QSerializer/src/qserializer.h ../src/XConfigGen.h ../src/models/xray/Xray.h)
qt_add_executable(simple_test ${SRC_FILES} ${HEADER_FILES})
target_link_libraries(simple_test PRIVATE Qt6::Core)
